# qiskit-code-assistant-jupyterlab

./: .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  GETTING_STARTED.md  GITHUB_ACTIONS.md  LICENSE  LOCAL_SETUP.md  QUICKSTART.md  README-PyPi.md  README.md  RELEASE.md  TESTING.md  install.json  jest.config.js  package-lock.json  package.json  pyproject.toml  setup.py  setup_local.sh  tsconfig.eslint.json  tsconfig.json  tsconfig.test.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  check-release.yml  publish-release.yml  test.yml
docs/: EULA.md  credential_selection.md
jupyter-config/server-config/: qiskit_code_assistant_jupyterlab.json
qiskit_code_assistant_jupyterlab/: __init__.py  handlers.py
schema/: plugin.json
src/: QiskitCompletionProvider.ts  StatusBarWidget.ts  index.ts
src/__mocks__/: svgMock.ts
src/__mocks__/@jupyterlab/: application.ts  apputils.ts  completer.ts  coreutils.ts  notebook.ts  services.ts  settingregistry.ts  statusbar.ts  ui-components.ts
src/__mocks__/@lumino/: widgets.ts
src/__tests__/: QiskitCompletionProvider.test.ts  StatusBarWidget.test.ts  setup.ts
src/service/: api.ts  autocomplete.ts  credentials.ts  disclaimer.tsx  feedback.tsx  migration.ts  modelHandler.ts  token.ts
src/service/__tests__/: api.test.ts  autocomplete.test.ts  credentials.test.ts  migration.test.ts  modelHandler.test.ts  token.test.ts
src/utils/: handler.ts  icons.ts  schema.ts  svg.d.ts
src/utils/__tests__/: handler.test.ts
style/: base.css  index.css  index.js
